tests/baselines/reference/parserBreakStatement1.d.errors.txt
==== tests/cases/compiler/parserBreakStatement1.d.ts (2 errors) ====
    break;
    ~~~~~
!!! parserBreakStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.
    ~~~~~~
!!! parserBreakStatement1.d.ts(1,1): error TS2202: 'break' statement can only be used within an enclosing iteration or switch statement.